--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 		<h1>my astro site 🚀</h1>
 	</body>
 </html>
