--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,7 +14,17 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 		<h1>my astro blog 🚀</h1>
-      <p>I am working through Astro's introductory tutorial. This is the third page on my website, and it's the second one I built myself!</p>
-      <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+      <p>This is where I will post about my Astro learning journey.</p>
+      <ul>
+        <li>
+          <a href="/posts/post-1/">Post 1</a>
+        </li>
+        <li>
+          <a href="/posts/post-2/">Post 2</a>
+        </li>
+        <li>
+          <a href="/posts/post-3/">Post 3</a>
+        </li>
+    </ul>
 	</body>
 </html>
