--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,10 @@ const skills = ["hot", "spicy", "good on things", "vinegar wrangling", "using th
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "darkolivegreen";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -22,6 +26,17 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: crimson;
+        font-size: 3rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
 	</head>
 	<body>
     <a href="/">Home</a>
@@ -40,7 +55,7 @@ const goal = 3;
       </ul>
       <p>My skills are:</p>
       <ul>
-        {skills.map((skill) => <li>{skill}</li>)}
+        {skills.map((skill) => <li class={"skill"}>{skill}</li>)}
     </ul>
     {happy && <p>I am happy to be learning Astro!</p>}
     {finished && <p>I finished this tutorial!</p>}
