✨ Create global style sheet and import to existing pages

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/global.css";
+
 const pageTitle = "Pickle potato faces shall one day rule the galaxy ✨";
 
 const identity = {
