--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
 
 const pageTitle = "Astro test home page";
 ---
@@ -12,10 +13,8 @@ const pageTitle = "Astro test home page";
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
-	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+	<body >
+		<Navigation />
 		<h1>my astro site 🚀</h1>
 	</body>
 </html>
