--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
 
 const pageTitle = "Astro test site blog";
 ---
@@ -13,9 +14,7 @@ const pageTitle = "Astro test site blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+		<Navigation />
 		<h1>my astro blog 🚀</h1>
       <p>This is where I will post about my Astro learning journey.</p>
       <ul>
