--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
 
 const pageTitle = "Pickle potato faces shall one day rule the galaxy ✨";
 
@@ -45,9 +46,7 @@ const textCase = "uppercase";
     </style>
 	</head>
 	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
 		<h1>about my astro site 🚀</h1>
       <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
       <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
