--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 
 const pageTitle = "Astro test home page";
 ---
@@ -16,5 +17,6 @@ const pageTitle = "Astro test home page";
 	<body >
 		<Navigation />
 		<h1>my astro site 🚀</h1>
+		<Footer />
 	</body>
 </html>
