♻️  Refactor Footer and import Social

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,11 @@
 ---
-const platform = "github";
-const username = "nichelicorn";
+import Social from "./Social.astro";
 ---
 
 <footer>
-  <p>Learn more about my projects on <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+  <p>check out my
+    <Social platform="github" username="nichelicorn" />
+    or
+    <Social platform="twitter" username="nichelicorn" />
+  </p>  
 </footer>
