--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
 const pageTitle = "Astro test site blog";
@@ -15,7 +15,7 @@ const pageTitle = "Astro test site blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>my astro blog 🚀</h1>
       <p>This is where I will post about my Astro learning journey.</p>
       <ul>
