--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
 const pageTitle = "Astro test home page";
@@ -15,7 +15,7 @@ const pageTitle = "Astro test home page";
 		<title>{pageTitle}</title>
 	</head>
 	<body >
-		<Navigation />
+		<Header />
 		<h1>my astro site 🚀</h1>
 		<Footer />
 	</body>
