--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,19 @@ h1 {
 }
 
 /* nav styles */
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #539d12;
+}
+
 .nav-links {
   width: 100%;
   top: 5rem;
