--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@ h1 {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #539d12;
+  background-color: #ff9776;
 }
 
 .nav-links {
@@ -74,8 +74,8 @@ nav-links a {
     display: inline-block;
     padding: 15px 20px;
   }
-}
 
-.hamburger {
-  display: none;
+  .hamburger {
+    display: none;
+  }
 }
