--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,8 @@ const pageTitle = "Astro test home page";
 		<Header />
 		<h1>my astro site 🚀</h1>
 		<Footer />
-		 <script>
-			document.querySelector('.hamburger').addEventListener('click', () => {
-      document.querySelector('.nav-links').classList.toggle('expanded');
-    });
-  </script>
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
