✨ Add slot element to import h2

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ const pageTitle = "Pickle Force 🥒🔪💪";
 	<body >
 		<Header />
 		<h1>{pageTitle}</h1>
+    <slot />
 		<Footer />
 		<script>
 			import "../scripts/menu.js";
