✨ Import pageTitle from BaseLayout to index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const pageTitle = "Astro test home page";
+const pageTitle = "home page, eh";
 ---
 
-<BaseLayout>
-	<h2>The pickle Hero's Journey</h2>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>A cucumber's Hero's Journey</h2>
 </BaseLayout>
