--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
-const pageTitle = "Pickle Force 🥒🔪💪";
+const pageTitle = "Pickle's Peregrination 🥒🔪💪";
 ---
 
 <html lang="en">
