--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const pageTitle = "home page, eh";
+const pageTitle = "Pickle's Peregrination 🥒🔪💪";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
