--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-
-const pageTitle = "Pickle potato faces shall one day rule the galaxy ✨";
+const pageTitle = "Pickles are unexpectedly charming ✨";
 
 const identity = {
   firstName: "Spicy Mary",
@@ -26,22 +22,13 @@ const skillColor = "darkolivegreen";
 const textCase = "uppercase";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-    
 <BaseLayout>
   <style define:vars={{backColor, skillColor, fontWeight, textCase}}>
     html {
     background: var(--backColor);
     }
     h1 {
-      color: crimson;
-      font-size: 3rem;
+      color: darkgreen;
     }
     .skill {
       color: var(--skillColor);
@@ -49,7 +36,7 @@ const textCase = "uppercase";
       text-transform: var(--textCase);
     }
   </style>
-  <h1>about my astro site 🚀</h1>
+  <h1>{pageTitle}</h1>
       <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
       <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
       <p>Here are a few facts about me, a pickle:</p>
