✨ Import BaseLayout to blog

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ const pageTitle = "Pickles are unexpectedly charming ✨";
 const identity = {
   firstName: "Spicy Mary",
   country: "Denver",
-  occupation: "Delicacy",
+  occupation: "Culinary Entertainer",
   hobbies: ["spicing things up", "being salty", "making your life better", "bringing pickles into the mix"],
 };
 
@@ -25,7 +25,7 @@ const textCase = "uppercase";
 <BaseLayout>
   <style define:vars={{backColor, skillColor, fontWeight, textCase}}>
     html {
-    background: var(--backColor);
+      background: var(--backColor);
     }
     h1 {
       color: darkgreen;
