--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
@@ -17,12 +18,16 @@ const pageTitle = "Astro test site blog";
 	<body>
 		<Header />
 		<h1>my astro blog 🚀</h1>
-      <p>This is where I will post about my Astro learning journey.</p>
-      <ul>
-        <li><a href="/posts/post-1/">Post 1</a></li>
-        <li><a href="/posts/post-2/">Post 2</a></li>
-        <li><a href="/posts/post-3/">Post 3</a></li>
+		<p>This is where I will post about my Astro learning journey.</p>
+		<ul>
+			<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+			<li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
 		<Footer />
 	</body>
 </html>
+
+<BaseLayout>
+
+<BaseLayout/>
