--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -29,5 +29,11 @@ const pageTitle = "Astro test site blog";
 </html>
 
 <BaseLayout>
-
+		<h1>my astro blog 🚀</h1>
+		<p>This is where I will post about my Astro learning journey.</p>
+		<ul>
+			<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+			<li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
 <BaseLayout/>
