--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,11 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 
-const pageTitle = "Blog about pickles";
+const pageTitle = "Blog about pickles 🥒🧂🫙";
 ---
 
 <BaseLayout>
-		<h1>my astro blog 🚀</h1>
+		<h1>{pageTitle}</h1>
 		<p>This is where I will post about my Astro learning journey.</p>
 		<ul>
 			<li><a href="/posts/post-1/">Post 1</a></li>
