--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,4 +3,5 @@ const { frontmatter } = Astro.props;
 ---
 <h1>{frontmatter.title}</h1>
 <p>Written by {frontmatter.author}</p>
+<h5>Published on {frontmatter.pubDate.slice(0, 10)}</h5>
 <slot />
