--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro"
 const { frontmatter } = Astro.props;
 ---
 <h1>{frontmatter.title}</h1>
@@ -7,3 +8,4 @@ const { frontmatter } = Astro.props;
 <a href="/">Home</a>
 <a href="/blog">Back</a>
 <slot />
+<Footer>
