--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,11 +1,20 @@
 ---
-import Footer from "../components/Footer.astro"
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Footer from "../components/Footer.astro";
 const { frontmatter } = Astro.props;
 ---
+
 <h1>{frontmatter.title}</h1>
+<h3>{frontmatter.description}</h3>
 <p>Written by {frontmatter.author}</p>
 <h5>Published on {frontmatter.pubDate.slice(0, 10)}</h5>
 <a href="/">Home</a>
 <a href="/blog">Back</a>
+<div>
+  <img src={frontmatter.image.url} width="300" />
+</div>  
 <slot />
 <Footer>
+
+<BaseLayout>
+</BaseLayout>
