--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,8 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
-<BaseLayout>
-  <h1>{frontmatter.title}</h1>
+<BaseLayout pageTitle={frontmatter.title}>
   <h3>{frontmatter.description}</h3>
   <p>Written by {frontmatter.author}</p>
   <h5>Published on {frontmatter.pubDate.slice(0, 10)}</h5>
