--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
+const allPosts = await Astro.glob("../pages/posts/*.md");
 const pageTitle = "Blog about pickles 🥒🧂🫙";
 ---
 
