--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,5 +12,7 @@ const pageTitle = "Blog about pickles 🥒🧂🫙";
 		<li><a href="/posts/post-1/">Post 1</a></li>
 		<li><a href="/posts/post-2/">Post 2</a></li>
 		<li><a href="/posts/post-3/">Post 3</a></li>
+
+		{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
 	</ul>
 </BaseLayout>
