--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
 
 const allPosts = await Astro.glob("../pages/posts/*.md");
 const pageTitle = "Blog about pickles 🥒🧂🫙";
@@ -9,6 +10,6 @@ const pageTitle = "Blog about pickles 🥒🧂🫙";
 	<h1>{pageTitle}</h1>
 	<p>This is where I will post about my Astro learning journey.</p>
 	<ul>
-		{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+		{allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
 	</ul>
 </BaseLayout>
