--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -2,13 +2,15 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
-  return [  
-    { params : { tag : "astro" } },
-    { params : { tag : "successes" } },
-    { params : { tag : "community" } },
-    { params : { tag : "blogging" } },
-    { params : { tag : "setbacks" } },
-    { params : { tag : "learning in public" } },
+ const allPosts = await Astro.glob("../posts/*.md");
+ 
+  return [
+    { params: { tag: "astro" } },
+    { params: { tag: "successes" } },
+    { params: { tag: "community" } },
+    { params: { tag: "blogging" } },
+    { params: { tag: "setbacks" } },
+    { params: { tag: "learning in public" } },
   ];
 }
 
