--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -7,14 +7,13 @@ export async function getStaticPaths() {
  
   const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 
-  return [
-    { params: { tag: "astro" }, props: {posts: allPosts }},
-    { params: { tag: "successes" }, props: {posts: allPosts } },
-    { params: { tag: "community" }, props: {posts: allPosts } },
-    { params: { tag: "blogging" }, props: {posts: allPosts } },
-    { params: { tag: "setbacks" }, props: {posts: allPosts } },
-    { params: { tag: "learning in public" }, props: {posts: allPosts } },
-  ];
+  return uniqueTags.map((tag) => {
+    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    return {
+      params: { tag },
+      props: { posts: filteredPosts },
+    };
+  });
 }
 
 const { tag } = Astro.params;
