--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -6,5 +6,5 @@ const pageTitle = "Tag index";
 const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 ---
   <BaseLayout pageTitle={pageTitle}>
-    <div>{tags.map((tag) => <p>{tag}</p>)}></div>  
+    <div>{tags.map((tag) =>   <p><a href={`/tags/${tag}`}>{tag}</a></p>)}></div>  
 </BaseLayout>
