--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -5,6 +5,9 @@ const allPosts = await Astro.glob("../posts/*.md");
 const pageTitle = "Tag index";
 const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 ---
-  <BaseLayout pageTitle={pageTitle}>
-    <div>{tags.map((tag) =>   <p><a href={`/tags/${tag}`}>{tag}</a></p>)}></div>  
+<BaseLayout pageTitle={pageTitle}>
+  <div class="tags">
+    {tags.map((tag) => (
+      <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+  ))}></div>  
 </BaseLayout>
