✨ Import Greeting to index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Greeting from "../components/Greeting.jsx";
 
 const pageTitle = "Pickle's Peregrination 🥒🔪💪";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<h2>A cucumber's Hero's Journey</h2>
+	<Greeting messages={["", "", "", ""]}/>
 </BaseLayout>
