✨ Add Greeting parameters and reference link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,6 @@ const pageTitle = "Pickle's Peregrination 🥒🔪💪";
 
 <BaseLayout pageTitle={pageTitle}>
 	<h2>A cucumber's Hero's Journey</h2>
-	<Greeting messages={["", "", "", ""]}/>
+	<Greeting messages={["A gas station was selling pickles two-for-one; It was the dill of the day.", "I watched a documentary last night about how pickles are made.It was jarring.", "Brining pickles makes them last much longer than fresh cucumbers, but packing them in an air-tight container—that’s what really seals the dill.", " Don’t forget to relish the moment!"]}/>
+	<h6>Pickle puns courtesy of <a href="https://www.rd.com/article/pickle-puns-and-jokes/">Readers Digest, 50 Pickle Puns and Jokes That Will Pickle Your Funny Bone</a></h6>
 </BaseLayout>
