💅 Update color theme

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ const identity = {
 const skills = ["hot", "spicy", "good on things", "vinegar wrangling", "using the leftover cucumber juice"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const backColor = "lightgoldenrodyellow";
